# keycompute

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.ar.md  README.es.md  README.md  README.zh-CN.md  README.zh-TW.md  config.toml.example
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: keycompute.yaml  openaikey-smoketest.yml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/common/: mod.rs
crates/integration-tests/src/mocks/: database.rs  email.rs  mod.rs  provider.rs
crates/integration-tests/tests/: e2e_api_flow.rs  e2e_auth.rs  e2e_billing_flow.rs  e2e_concurrent.rs  e2e_database.rs  e2e_error_handling.rs  e2e_full_chain.rs  e2e_gateway.rs  e2e_observability.rs  e2e_provider.rs  e2e_ratelimit.rs  e2e_routing.rs  e2e_user_tenant.rs
crates/keycompute-auth/: Cargo.toml
crates/keycompute-auth/src/: api_key.rs  jwt.rs  lib.rs  permission.rs  user.rs
crates/keycompute-auth/src/password/: login.rs
crates/keycompute-billing/src/: usage_log.rs
crates/keycompute-config/src/: crypto.rs  lib.rs
crates/keycompute-db/: Cargo.toml
crates/keycompute-db/src/: lib.rs  schema.rs
crates/keycompute-db/src/migrations/: 001_init.sql  003_create_api_keys.sql  004_create_accounts.sql  006_create_usage_logs.sql
crates/keycompute-db/src/models/: account.rs  api_key.rs  distribution_record.rs  email_verification.rs  mod.rs  password_reset.rs  payment_order.rs  pricing_model.rs  system_setting.rs  tenant.rs  tenant_distribution_rule.rs  usage_log.rs  user.rs  user_balance.rs  user_credential.rs  user_referral.rs
crates/keycompute-payment/keycompute-alipay/src/: service.rs
crates/keycompute-pricing/: Cargo.toml
crates/keycompute-pricing/src/: lib.rs
crates/keycompute-ratelimit/: Cargo.toml
crates/keycompute-ratelimit/src/: lib.rs  redis.rs
crates/keycompute-routing/: Cargo.toml
crates/keycompute-routing/src/: account_state.rs  lib.rs  provider_health.rs
crates/keycompute-runtime/src/: crypto.rs  lib.rs  redis_store.rs
crates/keycompute-server/: Cargo.toml
crates/keycompute-server/src/: extractors.rs  lib.rs  main.rs  middleware.rs  router.rs  state.rs
crates/keycompute-server/src/handlers/: admin.rs  admin_settings.rs  billing.rs  chat.rs  distribution.rs  mod.rs  openai.rs  pricing.rs  routing.rs  user.rs
crates/keycompute-types/src/: execution_plan.rs  lib.rs  request.rs  usage.rs
crates/llm-gateway/: Cargo.toml
crates/llm-gateway/src/: executor.rs  failover.rs  normalize.rs
crates/llm-gateway/src/proxy/: client.rs  config.rs
crates/llm-provider/keycompute-claude/src/: adapter.rs
crates/llm-provider/keycompute-deepseek/src/: adapter.rs
crates/llm-provider/keycompute-gemini/src/: adapter.rs
crates/llm-provider/keycompute-ollama/src/: adapter.rs
crates/llm-provider/keycompute-openai/src/: adapter.rs  stream.rs
crates/llm-provider/keycompute-provider-trait/src/: request.rs
crates/llm-provider/keycompute-vllm/: Cargo.toml
crates/llm-provider/keycompute-vllm/src/: adapter.rs  lib.rs
docs/: api_non_stream.py  api_stream.py  node-control-mvp-proposal.md
