[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api", "crates/keycompute-payment/keycompute-alipay", "crates/keycompute-payment/keycompute-wechatpay", "crates/keycompute-runtime", "crates/llm-gateway", "crates/llm-provider/keycompute-claude", "crates/llm-provider/keycompute-gemini", "crates/llm-provider/keycompute-ollama", "crates/llm-provider/keycompute-openai", "crates/keycompute-types", "crates/keycompute-db", "crates/keycompute-auth", "crates/keycompute-ratelimit", "crates/keycompute-pricing", "crates/keycompute-routing", "crates/llm-provider/keycompute-provider-trait", "crates/llm-provider/keycompute-deepseek", "crates/keycompute-billing", "crates/keycompute-distribution", "crates/keycompute-observability",
    "crates/keycompute-server",
    "crates/integration-tests", "crates/llm-provider/keycompute-vllm", "crates/keycompute-config", "crates/keycompute-emailserver",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# workspace crates
keycompute-types = { path = "crates/keycompute-types" }
keycompute-db = { path = "crates/keycompute-db" }
keycompute-runtime = { path = "crates/keycompute-runtime" }
keycompute-auth = { path = "crates/keycompute-auth" }
keycompute-ratelimit = { path = "crates/keycompute-ratelimit" }
keycompute-pricing = { path = "crates/keycompute-pricing" }
keycompute-routing = { path = "crates/keycompute-routing" }
keycompute-provider-trait = { path = "crates/llm-provider/keycompute-provider-trait" }
keycompute-openai = { path = "crates/llm-provider/keycompute-openai" }
keycompute-deepseek = { path = "crates/llm-provider/keycompute-deepseek" }
keycompute-vllm = { path = "crates/llm-provider/keycompute-vllm" }
keycompute-claude = { path = "crates/llm-provider/keycompute-claude" }
keycompute-gemini = { path = "crates/llm-provider/keycompute-gemini" }
keycompute-ollama = { path = "crates/llm-provider/keycompute-ollama" }
llm-gateway = { path = "crates/llm-gateway" }
keycompute-billing = { path = "crates/keycompute-billing" }
keycompute-distribution = { path = "crates/keycompute-distribution" }
keycompute-observability = { path = "crates/keycompute-observability" }
keycompute-server = { path = "crates/keycompute-server" }
keycompute-config = { path = "crates/keycompute-config" }
keycompute-emailserver = { path = "crates/keycompute-emailserver" }
keycompute-alipay = { path = "crates/keycompute-payment/keycompute-alipay" }
ui = { path = "packages/ui" }
api = { path = "packages/api" }
