[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
# 被测试的 crates
keycompute-types = { workspace = true }
keycompute-db = { workspace = true }
keycompute-auth = { workspace = true }
keycompute-ratelimit = { workspace = true }
keycompute-pricing = { workspace = true }
keycompute-routing = { workspace = true }
keycompute-runtime = { workspace = true }
keycompute-billing = { workspace = true }
keycompute-distribution = { workspace = true }
keycompute-observability = { workspace = true }
keycompute-server = { workspace = true }
keycompute-provider-trait = { workspace = true }
keycompute-openai = { workspace = true }
llm-gateway = { workspace = true }

# 测试依赖
tokio = { version = "1", features = ["full", "test-util"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.35"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 测试框架
anyhow = "1.0"
once_cell = "1.19"
dashmap = "6.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

# 测试文件在 tests/ 目录下自动发现
