[package]
name = "keycompute-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types = { workspace = true }
keycompute-db = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
