[package]
name = "keycompute-routing"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types = { workspace = true }
keycompute-runtime = { workspace = true }
keycompute-db = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
dashmap = "6"
rust_decimal = "1.40"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
