[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types = { workspace = true }
keycompute-runtime = { workspace = true }
keycompute-routing = { workspace = true }
keycompute-provider-trait = { workspace = true }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.35"
tiktoken-rs = "0.9.1"
